Fixed bug #75075 (unpack with X* causes infinity loop)